# learn-cmake-conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  rappel.txt  reminder.txt
script/: all.sh  build-dependencies.sh  build.sh  clean-build-system.sh
src/: Main.cpp
